canvas acceleration particle

--- a/canvas/canvas draw particle base/index.html
+++ b/canvas/canvas draw particle base/index.html
@@ -13,7 +13,7 @@
         overflow: hidden;
       }
       canvas {
-        background-color: orange;
+        background-color: white;
       }
     </style>
   </head>
